{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 127,
  "lineage": "26a24e3c-9c61-fc69-93b3-b4d717948ad9",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app_net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkInterfaces/app-network",
            "internal_domain_name_suffix": "x5udash0ik0uvnqj1pl3uqt3lb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-webserver",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "app-network",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "azure-stack",
            "tags": {
              "CostCenter": "test"
            }
          },
          "dependencies": [
            "module.networking.azurerm_subnet.app-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_net_interface_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkInterfaces/web-network-1",
            "internal_domain_name_suffix": "x5udash0ik0uvnqj1pl3uqt3lb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-webserver-1",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/publicIPAddresses/web-public-ip-1",
                "subnet_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "web-network-1",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "azure-stack",
            "tags": {
              "CostCenter": "test"
            }
          },
          "dependencies": [
            "module.compute.azurerm_public_ip.web_public_ip_1",
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_net_interface_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkInterfaces/web-network-2",
            "internal_domain_name_suffix": "x5udash0ik0uvnqj1pl3uqt3lb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-webserver-2",
                "primary": true,
                "private_ip_address": "192.168.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/publicIPAddresses/web-public-ip-2",
                "subnet_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "web-network-2",
            "private_ip_address": "192.168.1.5",
            "private_ip_addresses": [
              "192.168.1.5"
            ],
            "resource_group_name": "azure-stack",
            "tags": {
              "CostCenter": "test"
            }
          },
          "dependencies": [
            "module.compute.azurerm_public_ip.web_public_ip_2",
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_public_ip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/publicIPAddresses/web-public-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "web-public-ip-1",
            "resource_group_name": "azure-stack",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "CostCenter": "test"
            }
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_public_ip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/publicIPAddresses/web-public-ip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "web-public-ip-2",
            "resource_group_name": "azure-stack",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "CostCenter": "test"
            }
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-stack",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-stack",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-stack",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4830e8bf-42fa-4ab5-b609-dbd7da427d59",
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01",
            "location": "centralindia",
            "name": "vnet01",
            "resource_group_name": "azure-stack",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
                "name": "web-subnet",
                "security_group": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
              },
              {
                "address_prefix": "192.168.2.0/24",
                "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
                "name": "app-subnet",
                "security_group": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
              },
              {
                "address_prefix": "192.168.3.0/24",
                "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
                "name": "db-subnet",
                "security_group": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/db-nsg"
              }
            ],
            "tags": {
              "CostCenter": "test"
            }
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "centralindia",
            "name": "app-nsg",
            "resource_group_name": "azure-stack",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "centralindia",
            "name": "db-nsg",
            "resource_group_name": "azure-stack",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "centralindia",
            "name": "web-nsg",
            "resource_group_name": "azure-stack",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.app-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.app-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.db-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.db-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/6dd8fdde-1511-4be3-b58e-2d69a99b2ffc/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.web-nsg"
          ]
        }
      ]
    }
  ]
}